--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ serde_yaml = "0.9"
 rusqlite = { version = "0.31.0", features = ["bundled"] }
 blake3 = "1"
 dirs-next = "2.0.0"
+tar = "0.4.40"
+regex = "1.10.3"
 
 [[bin]]
 name = "rim"
